Small additional changes.
- Added BodyComponent to help render the bodies out.
  - Still nothing renders.

--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,8 @@
   "presets": [
     "react",
     "stage-0",
-    "es2015"
+    "es2015",
+    "stage-1"
   ],
-  "plugins": ["transform-class-properties"]
+  "plugins": ["transform-class-properties", "transform-decorators-legacy"]
 }
