--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
   "dependencies": {
     "matter-js": "^0.10.0",
     "react": "^15.3.2",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "mobx": "^2.6.0"
   },
   "devDependencies": {
     "babel": "^6.5.2",
     "babel-cli": "^6.16.0",
     "babel-core": "^6.16.0",
     "babel-plugin-transform-class-properties": "^6.16.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "babel-preset-stage-1": "^6.16.0",
     "babel-runtime": "^6.9.2",
     "babel-traverse": "^6.16.0",
     "babel-types": "^6.16.0",
