--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
     "react",
     "reactjs"
   ],
+  "main": "src/index.js",
   "author": {
     "name": "Adam Balan",
     "email": "adamkylebalan@gmail.com"
+  },
+  "repository" :
+  {
+    "type" : "git",
+    "url" : "https://github.com/AdamKyle/ice-cream-engine"
   },
   "license": "MIT",
   "dependencies": {
